--- a/src/station1.html
+++ b/src/station1.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <img src="./assets/image/railway-thumbnail.png" width=30%>
+    <p>
+        <font size="5"><b>TechTrain</b>の使い方</font><br>
+        <font size="5"><b>TechBowl</b></font><br>
+    </p>
+    <span>
+        <font size="4">Suguru Ohki</font><br>
+        <font size="4">6,722回視聴・2021/04/22</font>
+    </span>
 </body>
 
 </html>
