--- a/src/station8.html
+++ b/src/station8.html
@@ -1,1 +1,44 @@
 <!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Aya_b" />
+    <meta
+      property="og:image"
+      content="C:\Users\Aya_b\html-stations\src\assets\image\railway-thumbnail.png"
+    />
+    <meta property="og:title" content="Station 8" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="C:/Users/Aya_b/html-stations/src/station8.html"
+    />
+    <link rel="stylesheet" href="./assets/css/station8.css" type="text/css" />
+    <title>Station 8</title>
+  </head>
+  <body>
+    <header>
+      <div class="header"></div>
+    </header>
+    <main>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="イメージ画像" />
+        <p class="card__title">TechTrainの使い方</p>
+        <p class="card__description">Suguru Ohki</p>
+        <p class="card__description">6,722回視聴・2021/04/22</p>
+      </div>
+      <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="イメージ画像" />
+        <p class="card__title">TechTrainの使い方</p>
+        <p class="card__description">Suguru Ohki</p>
+        <p class="card__description">6,722回視聴・2021/04/22</p>
+      </div>
+    </main>
+    <footer>
+      <div class="footer"></div>
+    </footer>
+  </body>
+</html>
