--- a/src/station12.html
+++ b/src/station12.html
@@ -7,11 +7,13 @@
     <title>Station 12</title>
   </head>
   <body>
-    <div class="card-container">
-      <div class="card">
+      <div class="card-container">
+        <div class="card">
           <p id="result"></p>
+        </div>
       </div>
-    </div>
+    <script type="text/javascript" src="./scripts/station12.js"></script>
+    <script type="text/javascript" src="./scripts/station12-common.js"></script>
   </body>
   <script type="text/javascript" src="./scripts/station12-common.js"></script>
 </html>
